--- a/css/car.css
+++ b/css/car.css
@@ -1,3 +1,13 @@
 html {
     background-color: #21556d;
 }
+
+.partes_auto{
+    max-width: 80%;
+    width: 60%; 
+    height: auto;
+    
+    margin-top: 5%;
+    margin-right: 10%;
+    margin-left: 20%;
+}
